--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^8.8.0",
-    "apollo-server": "^3.12.0",
+    "apollo-server-express": "^3.12.0",
     "class-validator": "^0.14.0",
+    "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
@@ -22,6 +24,8 @@
     "type-graphql": "^2.0.0-beta.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/jwt-express": "^1.1.3",
     "@types/node": "^20.2.5",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
