--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "migrate": "ts-node src/migrations/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,9 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.8.0",
     "apollo-server-express": "^3.12.0",
+    "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "graphql": "^16.6.0",
@@ -24,6 +27,7 @@
     "type-graphql": "^2.0.0-beta.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jwt-express": "^1.1.3",
     "@types/node": "^20.2.5",
