--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-jwt": "^8.4.1",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongodb": "^5.5.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^2.0.0-beta.2"
