--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc -p .",
-    "migrate": "ts-node src/migrations/index.ts"
+    "migrate": "ts-node src/migrations/index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -30,9 +31,12 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/jwt-express": "^1.1.3",
     "@types/node": "^20.2.5",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
