--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.8.0",
     "apollo-server-express": "^3.12.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -29,7 +29,7 @@
     "type-graphql": "^2.0.0-beta.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/jwt-express": "^1.1.3",
