--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -17,4 +17,4 @@ jobs:
       - uses: gitboard-io/gitboard-action@main
         with:
           username: mythosmystery
-          key: d42059cb-9ddc-4e0a-a83f-85fee5fef28b
+          key: ${{ secrets.GITBOARD_KEY}}
