--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   test:
     timeout-minutes: 15
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
