--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "resolveJsonModule": true,
     "baseUrl": "."
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "dist"],
   "include": ["./src/**/*.ts"]
 }
