--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/jwt-express": "^1.1.3",
     "@types/node": "^20.2.5",
     "jest": "^29.5.0",
